Added responsiveness in last 3 sections

--- a/index.html
+++ b/index.html
@@ -187,28 +187,28 @@
     </div>
 
     <div class="row description_box">
-      <div class="col-md-2 col-xs-4 col-md-offset-1 text-center">
+      <div class="col-md-2 col-xs-12 col-md-offset-1 text-center description_content">
         <img class="description_box_icon" src="assets/shape-1.png" alt="speakerphone">
         <h2 class="description_box_title"> Date </h2>
         <p class="description_box_subtitle"> 28 - 29th July </p>
 
       </div>
-      <div class="col-md-2 col-xs-4 text-center">
+      <div class="col-md-2 col-xs-12 text-center description_content">
         <img class="description_box_icon" src="assets/ico-talks.png" alt="speakerphone">
         <h2 class="description_box_title">Talks</h2>
         <p class="description_box_subtitle"> Opportunity to learn from the stalwarts of the js Commmunity. A Platform to Learn share and Connect.</p>
       </div>
-      <div class="col-md-2 col-xs-4 text-center">
+      <div class="col-md-2 col-xs-12 text-center description_content">
         <img class="description_box_icon" src="assets/ico-workshops.png" alt="speakerphone">
         <h2 class="description_box_title">Workshops</h2>
         <p class="description_box_subtitle">Join us to learn and interact with professional js trainers and experience live coding sessions.</p>
       </div>
-      <div class="col-md-2 col-xs-6 text-center">
+      <div class="col-md-2 col-xs-12 text-center description_content">
         <img class="description_box_icon" src="assets/ico-food.png" alt="speakerphone">
         <h2 class="description_box_title">Fabulous Food</h2>
         <p class="description_box_subtitle"> Enjoy sumptious cuisine prepared by one of the best restaurants in Bengaluru </p>
       </div>
-      <div class="col-md-2 col-xs-6 text-center">
+      <div class="col-md-2 col-xs-12 text-center description_content">
         <img class="description_box_icon" src="assets/ico-venue.png" alt="speakerphone">
         <h2 class="description_box_title">Venue</h2>
         <p class="description_box_subtitle">JW Marriott Hotel, Bengaluru, India</p>
