make jschannel description responsive

--- a/index.html
+++ b/index.html
@@ -96,6 +96,8 @@
           <a href="assets/sponsorship-flyer.pdf" target="_blank" class="become-a-sponser">Become A Sponser ></a>
         </div>
       </div>
+
+      <!-- Jschannel details -->
       <div class="row details hidden-xs hidden-sm">
         <div class="col-md-3">
           <img src="assets/ico-date.png" />
@@ -131,10 +133,10 @@
 
   <div class="container-fluid details-phone hidden-md hidden-lg">
     <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-12 phone-ico">
+      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
         <img src="assets/ico-date-phone.png" />
       </div>
-      <div class="col-sm-9 col-xs-12">
+      <div class="col-sm-9 col-xs-9 detail-row">
         <div class="block">
           <div class="title">Date</div>
           <div>July 28-29, 2017</div>
@@ -142,10 +144,10 @@
       </div>
     </div>
     <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-12 phone-ico">
+      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
         <img src="assets/ico-location-phone.png" />
       </div>
-      <div class="col-sm-9 col-xs-12">
+      <div class="col-sm-9 col-xs-9 detail-row">
         <div class="block">
           <div class="title">Location</div>
             <div>JW Marriott Hotel, Bengaluru, India</div>
@@ -153,10 +155,10 @@
       </div>
     </div>
     <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-12 phone-ico">
+      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
         <img src="assets/ico-speakers-phone.png" />
       </div>
-      <div class="col-sm-9 col-xs-12">
+      <div class="col-sm-9 col-xs-9 detail-row">
         <div class="block">
           <div class="title">Speakers</div>
             <div>20 Speakers</div>
@@ -164,10 +166,10 @@
       </div>
     </div>
     <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-12 phone-ico">
+      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
         <img src="assets/ico-tickets-phone.png" />
       </div>
-      <div class="col-sm-9 col-xs-12">
+      <div class="col-sm-9 col-xs-9 detail-row">
         <div class="block">
           <div class="title">Tickets</div>
             <div>Buy Tickets</div>
