make header responsive across devices

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- Main jumbotron -->
   <div class="jumbotron">
-    <div class="container">
+    <div class="container link-container">
       <div class="row">
         <div class="col-md-3 col-xs-8">
           <img class="jschannel-logo" src="assets/jschannel-logo.jpg" />
