Add speakers page and favicon
Add favIcon and theme color

Add speakers page

add speakers

--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
   <meta name="keywords" content="javascript,jschannel,javascript conference, Bengaluru,community,conference,NCR,jsconference,angularJS,nodeJS,angularjs,emberjs,ecmascript,iojs,hapijs,expressjs">
   <meta name="author" content="Pranam, Prakhar">
   <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="theme-color" content="#E9482B">
-  <meta name="msapplication-navbutton-color" content="#E9482B">
+  <meta name="theme-color" content="#FFD527">
+  <meta name="msapplication-navbutton-color" content="#FFD527">
   <meta name="mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="description" content="JSChannel Conference brings together JavaScript Enthusiasts from across the world.This July (15-16th), join us for a 2-day conference in Bengaluru">
+  <meta name="description" content="JSChannel Conference brings together JavaScript Enthusiasts from across the world.This July (28-29th), join us for a 2-day conference in Bengaluru">
   <meta property="og:title" content="JSChannel Conference">
-  <meta property="og:url" content="http://2016.jschannel.com">
+  <meta property="og:url" content="http://2017.jschannel.com">
   <meta property="og:type" content="website">
   <meta property="og:description" content="JSChannel Conference brings together JavaScript Enthusiasts from across the world.This July (15-16th), join us for a 2-day conference in Bengaluru">
   <meta property="og:image" content="http://photos1.meetupstatic.com/photos/event/2/7/e/a/highres_446890218.jpeg">
@@ -26,7 +26,7 @@
   <meta property="og:author" content="JSChannel">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-  <link rel="icon" href="../../favicon.ico">
+  <link rel="icon" href="./fav-icon.png">
 
   <!-- Bootstrap core CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
@@ -283,52 +283,227 @@
     </div>
   </div>
 
-  <div class="container-fluid speakers visible">
-    <div class="row">
-      <div class="col-md-12 text-center title-gutter">
-        <span class="title">Meet Our Speakers</span>
+ <div class="container-fluid speakers">
+         <div class="row">
+            <div class="col-md-12 text-center title-gutter">
+               <span class="title">Meet Our Speakers</span>
+            </div>
+         </div>
+         <div class="row">
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-6 col-xs-offset-3">
+                  <img src="https://randomuser.me/api/portraits/men/83.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-sm-12 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon facebook"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon twitter"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon github"></span>
+                  </a>
+               </div>
+            </div>
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/women/83.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon facebook"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon twitter"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon github"></span>
+                  </a>
+               </div>
+            </div>
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/men/28.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon facebook"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon twitter"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon github"></span>
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/men/31.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon facebook"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon twitter"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon github"></span>
+                  </a>
+               </div>
+            </div>
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/women/37.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon facebook"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon twitter"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon github"></span>
+                  </a>
+               </div>
+            </div>
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/men/67.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon facebook"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon twitter"></span>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon github"></span>
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/men/34.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon facebook"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon twitter"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon github"></div>
+                  </a>
+               </div>
+            </div>
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/men/80.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon facebook"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon twitter"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon github"></div>
+                  </a>
+               </div>
+            </div>
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/women/23.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon facebook"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon twitter"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon github"></div>
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/men/24.jpg" class="img-circle img-responsive col-md-6">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon facebook"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon twitter"></div>
+                  </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                     <div class="icon github"></div>
+                  </a>
+               </div>
+            </div>
+         </div>
+         <div class="row">
+            <div class="col-md-offset-9 col-md-2">
+               <a class="view_all" href="">View All &gt;</a>
+            </div>
+         </div>
       </div>
-    </div>
-    <div class="row speaker-gutter-top">
-      <div class="col-md-offset-1 col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-    </div>
-    <div class="row speaker-gutter-top">
-      <div class="col-md-offset-1 col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-      <div class="col-md-2">
-        <img src="assets/dummy-img.png" class="img-responsive"/>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-md-offset-9 col-md-2">
-        <a class="view_all pull-right" href="">View All ></a>
-      </div>
-    </div>
-  </div>
 
   <div class="container sponsors visible">
     <div class="row">
