--- a/index.html
+++ b/index.html
@@ -510,60 +510,60 @@
     </div>
     <div class="row">
       <div class="col-md-offset-1 col-md-4 img-height-400">
-        <img src="assets/gallery/1.jpg" class="img-responsive"/>
+        <div class="gallery-image image-1"></div>
       </div>
       <div class="col-md-2">
         <div class="row gallery-gutter-bottom">
           <div class="col-md-12 img-height-190">
-            <img src="assets/gallery/2.jpg" class="img-responsive"/>
+            <div class="gallery-image image-2"></div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 img-height-190">
-            <img src="assets/gallery/3.jpg" class="img-responsive"/>
-          </div>
-        </div>
-      </div>
-      <div class="col-md-2">
-        <div class="row gallery-gutter-bottom">
-          <div class="col-md-12 img-height-190">
-            <img src="assets/gallery/4.jpg" class="img-responsive"/>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 img-height-190">
-            <img src="assets/gallery/5.jpg" class="img-responsive"/>
+            <div class="gallery-image image-3"></div>
           </div>
         </div>
       </div>
       <div class="col-md-2">
         <div class="row gallery-gutter-bottom">
           <div class="col-md-12 img-height-190">
-            <img src="assets/gallery/6.jpg" class="img-responsive"/>
+            <div class="gallery-image image-4"></div>
           </div>
         </div>
         <div class="row">
           <div class="col-md-12 img-height-190">
-            <img src="assets/gallery/7.jpg" class="img-responsive"/>
+            <div class="gallery-image image-5"></div>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <div class="row gallery-gutter-bottom">
+          <div class="col-md-12 img-height-190">
+            <div class="gallery-image image-6"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-12 img-height-190">
+            <div class="gallery-image image-7"></div>
           </div>
         </div>
       </div>
     </div>
     <div class="row gallery-gutter-top">
       <div class="col-md-offset-1 col-md-2 img-height-190">
-        <img src="assets/gallery/8.jpg" class="img-responsive"/>
+        <div class="gallery-image image-8"></div>
       </div>
       <div class="col-md-2 img-height-190">
-        <img src="assets/gallery/9.jpg" class="img-responsive"/>
+        <div class="gallery-image image-9"></div>
       </div>
       <div class="col-md-2 img-height-190">
-        <img src="assets/gallery/10.jpg" class="img-responsive"/>
+        <div class="gallery-image image-10"></div>
       </div>
       <div class="col-md-2 img-height-190">
-        <img src="assets/gallery/11.jpg" class="img-responsive"/>
+        <div class="gallery-image image-11"></div>
       </div>
       <div class="col-md-2 img-height-190">
-        <img src="assets/gallery/12.jpg" class="img-responsive"/>
+        <div class="gallery-image image-12"></div>
       </div>
     </div>
     <div class="row">
@@ -579,49 +579,49 @@
       </div>
     </div>
     <div class="row gallery-gutter-bottom">
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/1.jpg" class="img-responsive"/>
+      <div class="col-sm-6 col-xs-6">
+        <div class="gallery-image image-1"></div>
       </div>
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/2.jpg" class="img-responsive"/>
+      <div class="col-sm-6 col-xs-6">
+        <div class="gallery-image image-2"></div>
       </div>
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/3.jpg" class="img-responsive"/>
-      </div>
+      <!-- <div class="col-sm-4 col-xs-4">
+        <div class="gallery-image image-3"></div>
+      </div> -->
     </div>
     <div class="row gallery-gutter-bottom">
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/4.jpg" class="img-responsive"/>
+      <div class="col-sm-6 col-xs-6">
+        <div class="gallery-image image-4"></div>
       </div>
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/5.jpg" class="img-responsive"/>
+      <div class="col-sm-6 col-xs-6">
+        <div class="gallery-image image-5"></div>
       </div>
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/6.jpg" class="img-responsive"/>
-      </div>
+      <!-- <div class="col-sm-4 col-xs-4">
+        <div class="gallery-image image-6"></div>
+      </div> -->
     </div>
     <div class="row gallery-gutter-bottom">
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/7.jpg" class="img-responsive"/>
+      <div class="col-sm-6 col-xs-6">
+        <div class="gallery-image image-7"></div>
       </div>
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/8.jpg" class="img-responsive"/>
+      <div class="col-sm-6 col-xs-6">
+        <div class="gallery-image image-9"></div>
       </div>
-      <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/9.jpg" class="img-responsive"/>
-      </div>
+      <!-- <div class="col-sm-4 col-xs-4">
+        <div class="gallery-image image-9"></div>
+      </div> -->
     </div>
-    <div class="row gallery-gutter-bottom">
+    <!-- <div class="row gallery-gutter-bottom">
       <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/10.jpg" class="img-responsive"/>
+        <div class="gallery-image image-10"></div>
       </div>
       <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/11.jpg" class="img-responsive"/>
+        <div class="gallery-image image-11"></div>
       </div>
       <div class="col-sm-4 col-xs-4">
-        <img src="assets/gallery/12.jpg" class="img-responsive"/>
+        <div class="gallery-image image-12"></div>
       </div>
-    </div>
+    </div> -->
     <div class="row">
       <div class="col-sm-offset-9 col-sm-3">
         <a class="view_full pull-right" href="https://www.flickr.com/photos/100543192@N08/albums/72157670448580580" target="_blank">View Full Album ></a>
