Fixed responsiveness in venue section

--- a/index.html
+++ b/index.html
@@ -630,13 +630,11 @@
   </div>
 
   <div id="venue" class="container-fluid venue">
+    <div class="venue-title-gutter">
+      <span class="venue-title">Venue</span>
+    </div>
     <div class="row">
       <div class="col-md-5 venue-details">
-        <div class="row">
-          <div class="col-md-offset-2 col-md-9 venue-title-gutter">
-            <span class="venue-title">Venue</span>
-          </div>
-        </div>
         <div class="row">
           <div class="col-md-offset-2 col-md-9 venue-hotel-gutter">
             <span class="venue-hotel">JW Marriott Hotel</span>
