social for contact

--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                   <h3>Romain Hoogmed</h3>
                   <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
                </div>
-               <div class="social-icons col-xs-12 col-md-12 col-md-12">
+               <div class="social-icons col-xs-12 col-md-12">
                   <a href="http://www.facebook.com" target="_blank">
                   <span class="icon facebook"></span>
                   </a>
@@ -830,13 +830,24 @@
     <div class="container-fluid contactus">
       <div class="row contactrow">
         <p class="contact col-md-2 col-md-offset-1">Contact</p>
-        <p class="col-md-offset-2 col-md-7 numbers">Mobile: 8975532535</p>
+        <p class="col-md-offset-2 col-md-7 numbers"> 8975532535</p>
       </div>
       <div class="row">
         <p class="col-md-5 col-md-offset-5 copyright">Copyright © JSchannel 2013-2017</p>
       </div>
       <div class="row">
-        <p class="col-md-3 col-md-offset-5 copyright">Code of Conduct</p>
+        <div class="social-icons col-xs-12 col-md-3">
+           <a href="http://www.facebook.com" target="_blank">
+           <span class="icon facebook"></span>
+           </a>
+           <a href="http://www.facebook.com" target="_blank">
+           <span class="icon twitter"></span>
+           </a>
+           <a href="http://www.facebook.com" target="_blank">
+           <span class="icon github"></span>
+           </a>
+        </div>
+        <p class="col-md-3 col-md-offset-2 copyright">Code of Conduct</p>
       </div>
     </div>
   </footer>
