--- a/index.html
+++ b/index.html
@@ -79,100 +79,73 @@
           <img class="jschannel-logo" src="assets/jschannel-logo.jpg" />
         </div>
       </div>
-      <div class="row">
-        <div class="col-md-3">
-          <div class="cfp">
-            <span>SUBMIT CFP</span>
-          </div>
-        </div>
-      </div>
-      <div class="row recap">
-        <div class="col-md-3">
-          <span class="recap-2016">Recap 2016 ></span>
-        </div>
-      </div>
-      <div class="row sponser">
-        <div class="col-md-3">
-          <a href="assets/sponsorship-flyer.pdf" target="_blank" class="become-a-sponser">Become A Sponser ></a>
-        </div>
-      </div>
 
-      <!-- Jschannel details -->
+      <!-- Jschannel details - desktop view -->
       <div class="row details hidden-xs hidden-sm">
-        <div class="col-md-3">
-          <img src="assets/ico-date.png" />
-          <div class="block">
+        <div class="col-md-6 row">
+          <div class="col-md-3 details-image icon-calender" /></div>
+          <div class="col-md-9 block">
             <div class="title">Date</div>
             <div>July 28-29, 2017</div>
           </div>
         </div>
-        <div class="col-md-3">
-          <img src="assets/ico-location.png" />
-          <div class="block">
+      </div>
+      <div class="row details hidden-xs hidden-sm">
+        <div class="col-md-6 row">
+          <div class="col-md-3 details-image icon-location" /></div>
+          <div class="col-md-9 block">
             <div class="title">Location</div>
             <div>JW Marriott Hotel, Bengaluru, India</div>
           </div>
         </div>
-        <div class="col-md-3">
-          <img src="assets/ico-speakers.png" />
-          <div class="block">
-            <div class="title">Speakers</div>
-            <div>20 Speakers</div>
-          </div>
-        </div>
-        <div class="col-md-3">
-          <img src="assets/ico-tickets.png" />
-          <div class="block">
-            <div class="title">Tickets</div>
-            <div>Buy Tickets</div>
-          </div>
-        </div>
       </div>
-    </div>
-  </div>
 
-  <div class="container-fluid details-phone hidden-md hidden-lg">
-    <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
-        <img src="assets/ico-date-phone.png" />
-      </div>
-      <div class="col-sm-9 col-xs-9 detail-row">
-        <div class="block">
-          <div class="title">Date</div>
-          <div>July 28-29, 2017</div>
+      <!-- details row for mobile view -->
+      <div class="details-phone hidden-md hidden-lg">
+        <div class="row details-phone-row">
+          <div class="col-sm-2 col-xs-3 phone-ico text-center">
+            <img src="assets/ico-date-phone.png" />
+          </div>
+          <div class="col-sm-10 col-xs-9 detail-row">
+            <div class="block">
+              <div class="title">Date</div>
+              <div>July 28-29, 2017</div>
+            </div>
+          </div>
+        </div>
+        <div class="row details-phone-row">
+          <div class="col-sm-2 col-xs-3 phone-ico text-center">
+            <img src="assets/ico-location-phone.png" />
+          </div>
+          <div class="col-sm-10 col-xs-9 detail-row">
+            <div class="block">
+              <div class="title">Location</div>
+                <div>JW Marriott Hotel, Bengaluru, India</div>
+            </div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
-        <img src="assets/ico-location-phone.png" />
-      </div>
-      <div class="col-sm-9 col-xs-9 detail-row">
-        <div class="block">
-          <div class="title">Location</div>
-            <div>JW Marriott Hotel, Bengaluru, India</div>
+
+      <!-- submit row -->
+      <div class="row links">
+        <div class="col-md-offset-0 col-md-4 col-sm-offset-1 col-sm-10 col-xs-12">
+          <div class="cfp">
+            <span class="text">Submit CFP</span>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
-        <img src="assets/ico-speakers-phone.png" />
-      </div>
-      <div class="col-sm-9 col-xs-9 detail-row">
-        <div class="block">
-          <div class="title">Speakers</div>
-            <div>20 Speakers</div>
+
+        <!-- recap row -->
+        <div class="col-md-offset-0 col-md-4 col-sm-offset-1 col-sm-10 col-xs-12">
+          <div class="cfp">
+            <span class="text">Recap 2016</span>
+          </div>
         </div>
-      </div>
-    </div>
-    <div class="row details-phone-row">
-      <div class="col-sm-offset-1 col-sm-2 col-xs-3 phone-ico text-center">
-        <img src="assets/ico-tickets-phone.png" />
-      </div>
-      <div class="col-sm-9 col-xs-9 detail-row">
-        <div class="block">
-          <div class="title">Tickets</div>
-            <div>Buy Tickets</div>
+
+        <!-- sponsor row -->
+        <div class="col-md-offset-0 col-md-4 col-sm-offset-1 col-sm-10 col-xs-12">
+          <div class="cfp">
+            <a href="assets/sponsorship-flyer.pdf" target="_blank" class="text">Become A Sponser</a>
+          </div>
         </div>
       </div>
     </div>
