Contact us with social icons

--- a/index.html
+++ b/index.html
@@ -830,13 +830,17 @@
     <div class="container-fluid contactus">
       <div class="row contactrow">
         <p class="contact col-md-2 col-md-offset-1">Contact</p>
-        <p class="col-md-offset-2 col-md-7 numbers"> 8975532535</p>
+        <p class="col-md-offset-2 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_phone.svg" class="contact_icon"> +918975532535</p>
+        <p class=" col-md-offset-5 col-md-4 col-sm-12 col-xs-12 numbers"><img src="assets/contact_mail.svg" class="contact_icon"> info@jschannel.com</p>
       </div>
       <div class="row">
         <p class="col-md-5 col-md-offset-5 copyright">Copyright © JSchannel 2013-2017</p>
       </div>
       <div class="row">
-        <div class="social-icons col-xs-12 col-md-3">
+        <p class="col-md-3 col-md-offset-5 copyright">Code of Conduct</p>
+      </div>
+      <div class="row">
+        <div class="social-icons col-xs-12 col-md-4">
            <a href="http://www.facebook.com" target="_blank">
            <span class="icon facebook"></span>
            </a>
@@ -846,8 +850,13 @@
            <a href="http://www.facebook.com" target="_blank">
            <span class="icon github"></span>
            </a>
+           <a href="http://www.facebook.com" target="_blank">
+           <span class="icon youtube"></span>
+           </a>
+           <a href="http://www.facebook.com" target="_blank">
+           <span class="icon flickr"></span>
+           </a>
         </div>
-        <p class="col-md-3 col-md-offset-2 copyright">Code of Conduct</p>
       </div>
     </div>
   </footer>
