updated links for social

--- a/index.html
+++ b/index.html
@@ -841,19 +841,19 @@
       </div>
       <div class="row">
         <div class="social-icons col-xs-12 col-md-4">
-           <a href="http://www.facebook.com" target="_blank">
+           <a href="https://www.facebook.com/javascriptchannel" target="_blank">
            <span class="icon facebook"></span>
            </a>
-           <a href="http://www.facebook.com" target="_blank">
+           <a href="https://twitter.com/js_channel/" target="_blank">
            <span class="icon twitter"></span>
            </a>
-           <a href="http://www.facebook.com" target="_blank">
-           <span class="icon github"></span>
+           <a href="https://plus.google.com/111069083279946389343/" target="_blank">
+           <span class="icon google"></span>
            </a>
-           <a href="http://www.facebook.com" target="_blank">
+           <a href="http://confreaks.tv/events/jschannelconf2015" target="_blank">
            <span class="icon youtube"></span>
            </a>
-           <a href="http://www.facebook.com" target="_blank">
+           <a href="https://www.flickr.com/photos/100543192@N08/albums/with/72157656673572946" target="_blank">
            <span class="icon flickr"></span>
            </a>
         </div>
