Fix iPhone issue try v1

--- a/index.html
+++ b/index.html
@@ -261,11 +261,13 @@
             <div class="col-md-12 text-center title-gutter">
                <span class="title">Meet Our Speakers</span>
             </div>
+            <div class="subtitle white-text">More awesome speakers to be anounced soon...</div>
          </div>
+         <div class="container-margin-top"></div>
          <div class="row">
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-6 col-xs-offset-3">
-                  <img src="https://randomuser.me/api/portraits/men/83.jpg" class="img-circle img-responsive col-md-6">
+                  <img src="https://randomuser.me/api/portraits/men/83.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-sm-12 col-xs-12">
                   <h3>Romain Hoogmed</h3>
@@ -273,8 +275,22 @@
                </div>
                <div class="social-icons col-xs-12 col-md-12 col-md-12">
                   <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon facebook"></span>
+                  <span class="icon twitter"></span>
                   </a>
+                  <a href="http://www.facebook.com" target="_blank">
+                  <span class="icon github"></span>
+                  </a>
+               </div>
+            </div>
+            <div class="speaker col-xs-12 col-md-4 col-sm-4">
+               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
+                  <img src="https://randomuser.me/api/portraits/women/83.jpg" class="img-circle img-responsive">
+               </div>
+               <div class="bio col-md-6 col-xs-12">
+                  <h3>Romain Hoogmed</h3>
+                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
+               </div>
+               <div class="social-icons col-xs-12 col-md-12">
                   <a href="http://www.facebook.com" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
@@ -285,27 +301,7 @@
             </div>
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/women/83.jpg" class="img-circle img-responsive col-md-6">
-               </div>
-               <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
-               </div>
-               <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon facebook"></span>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon twitter"></span>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon github"></span>
-                  </a>
-               </div>
-            </div>
-            <div class="speaker col-xs-12 col-md-4 col-sm-4">
-               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/28.jpg" class="img-circle img-responsive col-md-6">
+                  <img src="https://randomuser.me/api/portraits/men/28.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
                   <h3>Romain Hoogmed</h3>
@@ -313,9 +309,6 @@
                   <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon facebook"></span>
-                  </a>
                   <a href="http://www.facebook.com" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
@@ -328,16 +321,13 @@
          <div class="row">
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/31.jpg" class="img-circle img-responsive col-md-6">
+                  <img src="https://randomuser.me/api/portraits/men/31.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
                   <h3>Romain Hoogmed</h3>
                   <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon facebook"></span>
-                  </a>
                   <a href="http://www.facebook.com" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
@@ -348,16 +338,13 @@
             </div>
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/women/37.jpg" class="img-circle img-responsive col-md-6">
+                  <img src="https://randomuser.me/api/portraits/women/37.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
                   <h3>Romain Hoogmed</h3>
                   <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon facebook"></span>
-                  </a>
                   <a href="http://www.facebook.com" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
@@ -368,16 +355,13 @@
             </div>
             <div class="speaker col-xs-12 col-md-4 col-sm-4">
                <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/67.jpg" class="img-circle img-responsive col-md-6">
+                  <img src="https://randomuser.me/api/portraits/men/67.jpg" class="img-circle img-responsive">
                </div>
                <div class="bio col-md-6 col-xs-12">
                   <h3>Romain Hoogmed</h3>
                   <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
                </div>
                <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                  <span class="icon facebook"></span>
-                  </a>
                   <a href="http://www.facebook.com" target="_blank">
                   <span class="icon twitter"></span>
                   </a>
@@ -387,95 +371,7 @@
                </div>
             </div>
          </div>
-         <div class="row">
-            <div class="speaker col-xs-12 col-md-4 col-sm-4">
-               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/34.jpg" class="img-circle img-responsive col-md-6">
-               </div>
-               <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
-               </div>
-               <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon facebook"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon twitter"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon github"></div>
-                  </a>
-               </div>
-            </div>
-            <div class="speaker col-xs-12 col-md-4 col-sm-4">
-               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/80.jpg" class="img-circle img-responsive col-md-6">
-               </div>
-               <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
-               </div>
-               <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon facebook"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon twitter"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon github"></div>
-                  </a>
-               </div>
-            </div>
-            <div class="speaker col-xs-12 col-md-4 col-sm-4">
-               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/women/23.jpg" class="img-circle img-responsive col-md-6">
-               </div>
-               <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
-               </div>
-               <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon facebook"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon twitter"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon github"></div>
-                  </a>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="speaker col-xs-12 col-md-4 col-sm-4">
-               <div class="col-md-6 col-md-offset-0 col-xs-offset-3 col-xs-6">
-                  <img src="https://randomuser.me/api/portraits/men/24.jpg" class="img-circle img-responsive col-md-6">
-               </div>
-               <div class="bio col-md-6 col-xs-12">
-                  <h3>Romain Hoogmed</h3>
-                  <p>Product Manager, kajshdkajshd kajhsd ajshdk ajhsdka jsdhakjshkajsdh aksjdh  Google</p>
-               </div>
-               <div class="social-icons col-xs-12 col-md-12">
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon facebook"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon twitter"></div>
-                  </a>
-                  <a href="http://www.facebook.com" target="_blank">
-                     <div class="icon github"></div>
-                  </a>
-               </div>
-            </div>
-         </div>
-         <div class="row">
-            <div class="col-md-offset-9 col-md-2">
-               <a class="view_all" href="">View All &gt;</a>
-            </div>
-         </div>
+         <div class="container-margin-bottom"></div>
       </div>
 
   <div class="container sponsors visible">
@@ -773,6 +669,7 @@
     <div class="row">
       <div class="col-sm-offset-9 col-sm-3">
         <a class="view_full pull-right" href="https://www.flickr.com/photos/100543192@N08/albums/72157670448580580" target="_blank">View Full Album ></a>
+
       </div>
     </div>
   </div>
