disabled cfp option ad removed recap from landing

--- a/index.html
+++ b/index.html
@@ -128,21 +128,21 @@
 
       <!-- submit row -->
       <div class="row links">
-        <div class="col-md-offset-0 col-md-4 col-sm-offset-1 col-sm-10 col-xs-12">
-          <div class="cfp">
-            <span class="text">Submit CFP</span>
+        <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
+          <div class="cfp disabled">
+            <span class="text">Submit CFP <span class="small-text">(Coming Soon)</span></span>
           </div>
         </div>
 
         <!-- recap row -->
-        <div class="col-md-offset-0 col-md-4 col-sm-offset-1 col-sm-10 col-xs-12">
+        <!-- <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
           <div class="cfp">
             <span class="text">Recap 2016</span>
           </div>
-        </div>
+        </div> -->
 
         <!-- sponsor row -->
-        <div class="col-md-offset-0 col-md-4 col-sm-offset-1 col-sm-10 col-xs-12">
+        <div class="col-md-offset-0 col-md-6 col-sm-offset-1 col-sm-10 col-xs-12">
           <div class="cfp">
             <a href="assets/sponsorship-flyer.pdf" target="_blank" class="text">Become A Sponser</a>
           </div>
